--- a/.env.example
+++ b/.env.example
@@ -54,4 +54,4 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 FALLBACK_LOCALE=id
 FAKER_LOCALE=id_ID
 FILESYSTEM_DRIVER=public
-LOCALE=ms
+LOCALE=id
